- implement an *Amazon Signature V4* header signer library in `/lib/helpers/s3_signer.rb`.   also implement a unit test file for it in `/spec/helpers/s3_signer_spec.rb`.   this helper library can computate the *Amazon Signature V4* authorization key, which necessary for interacting with our minio s3 bucket (or any s3 compatible bucket for that matter).   this code was ported from the deno typescript implementation: omar-azmi/moyasar-demo-project-s3-storage-deno@980efa8ab473853e108dadd038dc2e00af5b2cb0 - disable the annoying continuous integration github action (`/.github/workflows/ci.yml`), and switch it to manual dispatch mode.

--- a/.github/workflows/mi.yml
+++ b/.github/workflows/mi.yml
@@ -1,9 +1,12 @@
-name: CI
+name: MI
 
-on:
-  pull_request:
-  push:
-    branches: [ main ]
+# This is a Manual Integration github-action (MI) enjoy not seeing annoying errors on every push
+on: workflow_dispatch
+
+# on:
+#   pull_request:
+#   push:
+#     branches: [ main ]
 
 jobs:
   scan_ruby:
