- update the current services' source code (in `/app/services/backend/*.rb`), and their unit tests, and their doccumentation, to use `AsyncPromise`, instead of `Async::Task`. - in the `s3.rb` service, add a `MinIO` module for controlling the minio server `bootup` and `shutdown`, via rake tasks.   also, remove the invocation of minio rake tasks in the `s3_spec.rb` file, and instead use the new `MinIO` module for taking care of these tasks. - make minor tweaks in solargraph ruby LSP's configs and vscode settings.

--- a/.solargraph.yml
+++ b/.solargraph.yml
@@ -2,18 +2,20 @@
 include:
 - "app/controllers/**/*.rb"
 - "app/services/**/*.rb"
-- "lib/helpers/**/*.rb"
-- "spec/helpers/**/*.rb"
+- "lib/helpers/*.rb"
+- "spec/helpers/*.rb"
 - "spec/services/**/*.rb"
 exclude:
+- "temp/**/*"
 - "test/**/*"
 - "vendor/**/*"
 - ".bundle/**/*"
 require: []
 domains: []
 reporters:
-- rubocop
-- require_not_found
+- "typecheck"
+- "rubocop"
+- "require_not_found"
 formatter:
   rubocop:
     cops: safe
