- fix s3 backend not being able to handle characters that require url-escaping (such as blank space).   helper function `escape_url_component` in `fetch.rs` to escape the url component of the object name in the bucket. - make the object construction classes `StorageObjectWriteJson`, `StorageObjectReadJson`, and `StorageObjectMetadata` inherit from a `Struct` (instance) class.   this will allow easier access, because it supports string-key and symbol-key lookups, as well as destructuring pattern. - add vscode recommendation for sqlite database viewer.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
 	"recommendations": [
 		"denoland.vscode-deno",
-		"castwide.solargraph"
+    "castwide.solargraph",
+    "qwtel.sqlite-viewer"
 	]
 }
